added database and html templates

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,10 @@ requires-python = ">=3.10"
 dependencies = [
     "flask>=3.1.2",
     "gunicorn>=23.0.0",
+    "psycopg>=3.3.2",
+    "psycopg2-binary>=2.9.11",
     "python-dotenv>=1.2.1",
+    "validators>=0.35.0",
 ]
 
 [dependency-groups]
