--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,13 @@ dependencies = [
 dev = [
     "ruff>=0.14.10",
 ]
+
+[tool.ruff]
+line-length = 80
+
+[tool.ruff.lint]
+preview = true
+select = ["E", "F", "I", "C90"]
+
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["F401"]
